RESOLVED FIXED107454
Regression(r140262): Causes a lot of flakiness
https://bugs.webkit.org/show_bug.cgi?id=107454
Summary Regression(r140262): Causes a lot of flakiness
Chris Dumez
Reported 2013-01-21 08:10:27 PST
Around 900-1000 test cases became flakey after <http://trac.webkit.org/changeset/140262>.
Attachments
Patch (1.91 KB, patch)
2013-01-21 10:14 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2013-01-21 10:14:39 PST
WebKit Review Bot
Comment 2 2013-01-21 10:45:47 PST
Comment on attachment 183802 [details] Patch Clearing flags on attachment: 183802 Committed r140344: <http://trac.webkit.org/changeset/140344>
WebKit Review Bot
Comment 3 2013-01-21 10:45:51 PST
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 4 2013-01-21 11:08:15 PST
Flakiness is gone on the bots.
Note You need to log in before you can comment on or make changes to this bug.