Regression(r140262): Causes a lot of flakiness https://bugs.webkit.org/show_bug.cgi?id=107454

Reviewed by Alexey Proskuryakov.

r140262 introduced a lot of flakiness due to fixed layout mode
not getting disabled on the view after being enabled for
specific test cases. This patch makes sure fixed layout mode
properly gets reset in WebKitTestRunner to avoid flakiness.

* WebKitTestRunner/TestInvocation.cpp:
(WTR::updateLayoutType):


Canonical link: https://commits.webkit.org/125697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140344 268f45cc-cd09-0410-ab3c-d52691b4dbfc