Tools/WebKitTestRunner/TestInvocation.cpp
@@ -192,13 +192,9 @@ static bool shouldUseFixedLayout(const char* pathOrURL)
 
 static void updateLayoutType(const char* pathOrURL)
 {
-    bool useFixedLayout = shouldUseFixedLayout(pathOrURL);
-    if (!useFixedLayout)
-        return;
-
     WKRetainPtr<WKMutableDictionaryRef> viewOptions = adoptWK(WKMutableDictionaryCreate());
     WKRetainPtr<WKStringRef> useFixedLayoutKey = adoptWK(WKStringCreateWithUTF8CString("UseFixedLayout"));
-    WKRetainPtr<WKBooleanRef> useFixedLayoutValue = adoptWK(WKBooleanCreate(useFixedLayout));
+    WKRetainPtr<WKBooleanRef> useFixedLayoutValue = adoptWK(WKBooleanCreate(shouldUseFixedLayout(pathOrURL)));
     WKDictionaryAddItem(viewOptions.get(), useFixedLayoutKey.get(), useFixedLayoutValue.get());
 
     TestController::shared().ensureViewSupportsOptions(viewOptions.get());
